a first shot to enable REE and dashboard and passenger

--- a/templates/dashboard/database.yml.erb
+++ b/templates/dashboard/database.yml.erb
@@ -1,7 +1,7 @@
 production:
-  adapter: <%= db_adapter %>
+  adapter: mysql
   database: <%= db_name %>
-  hostname: <%= db_hostanme %>
+  hostname: localhost
   username: <%= db_username %>
   password: <%= db_password %>
   encoding: utf8
