--- a/templates/passenger/config.ru.erb
+++ b/templates/passenger/config.ru.erb
@@ -4,8 +4,7 @@
 # if puppet is not in your RUBYLIB:
 # $:.unshift('/opt/puppet/lib')
 
-$0 = "puppetmasterd"
-require 'puppet'
+$0 = "master"
 
 # if you want debugging:
 # ARGV << "--debug"
@@ -15,8 +14,8 @@ ARGV << "--logdest" << "/var/log/puppet/puppetmaster.log"
 <% if puppet_enable_dashboard -%>
 ARGV << "--reports" << "puppet_dashboard"
 <% end -%>
-require 'puppet/application/puppetmasterd'
+require 'puppet/application/master'
 # we're usually running inside a Rack::Builder.new {} block,
 # therefore we need to call run *here*.
-run Puppet::Application[:puppetmasterd].run
+run Puppet::Application[:master].run
 
