--- a/templates/passenger/puppetmaster.erb
+++ b/templates/passenger/puppetmaster.erb
@@ -8,7 +8,7 @@ Listen 8140
     SSLCertificateChainFile /etc/puppet/ssl/ca/ca_crt.pem
     SSLCACertificateFile    /etc/puppet/ssl/ca/ca_crt.pem
     # CRL checking should be enabled; if you have problems with Apache complaining about the CRL, disable the next line
-    SSLCARevocationFile     /etc/puppet/ssl/ca/ca_crl.pem
+    #SSLCARevocationFile     /etc/puppet/ssl/ca/ca_crl.pem
     SSLVerifyClient optional
     SSLVerifyDepth  1
     SSLOptions +StdEnvVars
