improve dashboard define to not only be local

--- a/templates/dashboard/database.yml.erb
+++ b/templates/dashboard/database.yml.erb
@@ -1,7 +1,7 @@
 production:
   adapter: mysql
   database: <%= db_name %>
-  hostname: localhost
+  hostname: <%= db_host %>
   username: <%= db_username %>
   password: <%= db_password %>
   encoding: utf8
